# sqlite

./: .gitignore  CMakeLists.txt
include/: sqlite3.h
src/: spellfix.c  spellfix.h
